add raphael as a conditional dependency and add support for nnn

--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
   "blyss": {
     "ignore": [
       "dist",
-      "build"
+      "build",
+      "src/scramblers",
+      "examples"
     ]
   }
 }
