--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "blyss | snazzy",
     "format": "prettier --single-quote --no-semi --write \"src/**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:client": "browserify src/index.js > scramby.js"
+    "build": "babel src --out-dir lib",
+    "flow": "flow",
+    "flow-typed": "flow-typed"
   },
   "repository": {
     "type": "git",
@@ -29,8 +31,12 @@
     "raphael": "^2.2.7"
   },
   "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "blyss": "^7.0.0",
     "browserify": "^14.4.0",
+    "flow-bin": "^0.49.1",
+    "flow-typed": "^2.1.2",
     "prettier": "^1.5.2",
     "snazzy": "^7.0.0"
   },
