--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "blyss | snazzy",
     "fix": "blyss --fix",
     "format": "prettier --single-quote --no-semi --write \"src/**/*.js\"",
-    "prepublish": "npm run build",
+    "prepare": "npm run build",
     "flow": "flow",
     "flow-typed": "flow-typed",
     "test": "npm run lint --silent && flow status && ava tests/**/*.js --fail-fast --verbose",
@@ -49,6 +49,7 @@
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "blyss": "^7.0.0",
     "browserify": "^14.4.0",
+    "chalk": "^2.0.1",
     "flow-bin": "^0.49.1",
     "flow-copy-source": "^1.2.0",
     "flow-typed": "^2.1.2",
