--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "ava": "^0.20.0",
     "babel-core": "^6.25.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
     "blyss": "^7.0.0",
     "browserify": "^14.4.0",
     "flow-bin": "^0.49.1",
@@ -71,6 +72,9 @@
     "babel": {
       "plugins": [
         "transform-flow-strip-types"
+      ],
+      "presets": [
+        "es2015"
       ]
     }
   }
